--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### Prepros ###
+# Config Prepros files to ignore
+prepros.cfg
+prepros-6.config
+
 # End of https://www.gitignore.io/api/windows,visualstudiocode
